<?xml version="1.0" encoding="utf-8"?>
<ExtensionInfo
    displayName="@string/extension_name"
    icon="@drawable/ic_breathing"
    id="vitalbreathe"
    scansDevices="true"
    fitFile="true">

    <DataType
        typeId="dashboard"
        displayName="@string/dashboard_name"
        description="@string/dashboard_desc"
        graphical="true"
        icon="@drawable/ic_breathing" />

    <DataType
        typeId="ve"
        displayName="@string/ve_name"
        description="@string/ve_desc"
        graphical="true"
        icon="@drawable/ic_breathing" />

    <DataType
        typeId="ve_graph"
        displayName="@string/ve_graph_name"
        description="@string/ve_graph_desc"
        graphical="true"
        icon="@drawable/ic_breathing" />

    <DataType
        typeId="br"
        displayName="@string/br_name"
        description="@string/br_desc"
        graphical="true"
        icon="@drawable/ic_breathing" />

    <DataType
        typeId="tv"
        displayName="@string/tv_name"
        description="@string/tv_desc"
        graphical="true"
        icon="@drawable/ic_breathing" />

    <DataType
        typeId="mi"
        displayName="@string/mi_name"
        description="@string/mi_desc"
        graphical="true"
        icon="@drawable/ic_breathing" />

    <DataType
        typeId="mi_bat"
        displayName="@string/mi_bat_name"
        description="@string/mi_bat_desc"
        graphical="true"
        icon="@drawable/ic_breathing" />

    <DataType
        typeId="vp_battery"
        displayName="@string/vp_battery_name"
        description="@string/vp_battery_desc"
        graphical="true"
        icon="@drawable/ic_breathing" />

    <DataType
        typeId="ve_zones"
        displayName="@string/ve_zones_name"
        description="@string/ve_zones_desc"
        graphical="true"
        icon="@drawable/ic_breathing" />

</ExtensionInfo>
